--- a/style.css
+++ b/style.css
@@ -2456,28 +2456,22 @@ p {
   width: auto;
   padding: 1px;
   margin-right: 5px;
-  border-radius: 1px;
-  transition: width 2s linear;
-  -webkit-transition: width 2s linear;
-  -moz-transition: width 2s linear; }
+  border-radius: 1px; }
 .navbar .input-search-invisible {
   visibility: hidden;
-  width: 0;
-  transition: width 2s linear;
-  -webkit-transition: width 2s linear;
-  -moz-transition: width 2s linear; }
+  width: 0; }
 
 .wo-btn {
   border: 0;
   background: #3ec6ff;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  font-weight: 300; }
   .wo-btn:hover {
     background: #0bb7ff;
     color: #e6e6e6; }
 
 /*Iconos*/
 .icon-background-rounded {
-  background: #3ec6ff;
   padding: 2rem;
   border-radius: 50%;
   display: block;
@@ -2486,16 +2480,17 @@ p {
   text-align: center;
   margin: 0 auto 1rem; }
   .icon-background-rounded span:before {
+    background: #3ec6ff;
     font-size: 2rem;
     color: #FFFFFF;
     line-height: 0.6;
     margin-left: -0.4rem; }
 
 .icon-social {
-  background: #3ec6ff;
   padding: 0.3rem;
   text-align: center; }
   .icon-social span:before {
+    background: #3ec6ff;
     color: #FFFFFF; }
 
 .icon-search {
@@ -2503,9 +2498,9 @@ p {
   .icon-search span:before {
     color: #212529; }
 
-.slider .item {
+.wo-slider .item {
   position: relative; }
-  .slider .item .caption {
+  .wo-slider .item .caption {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -2514,24 +2509,24 @@ p {
     margin: -8% 0 0 -25%;
     text-align: center; }
     @media only screen and (max-width: 479px) {
-      .slider .item .caption {
+      .wo-slider .item .caption {
         left: 30%;
         height: 30%;
         width: 90%; } }
-    .slider .item .caption h1, .slider .item .caption h4 {
+    .wo-slider .item .caption h1, .wo-slider .item .caption h4 {
       color: #FFFFFF;
       letter-spacing: 0.4rem; }
     @media only screen and (max-width: 479px) {
-      .slider .item .caption h1 {
+      .wo-slider .item .caption h1 {
         font-size: 2rem;
         letter-spacing: 0rem; } }
     @media only screen and (max-width: 479px) {
-      .slider .item .caption h4 {
+      .wo-slider .item .caption h4 {
         font-size: 0.7rem;
         letter-spacing: 0rem; } }
-.slider .owl-nav [class*=owl-] {
+.wo-slider .owl-nav [class*=owl-] {
   background: none; }
-.slider .owl-next span, .slider .owl-prev span {
+.wo-slider .owl-next span, .wo-slider .owl-prev span {
   font-size: 4rem; }
 
 .wo-section-back {
@@ -2645,16 +2640,17 @@ p {
     .wo-section-map-form .wo-form-contact .wo-btn {
       width: 100%; }
 
-.owl-carousel .owl-carrusel {
-  posición: relativo; }
-.owl-carousel .owl-prev,
-.owl-carousel .owl-next {
-  position: absolute;
-  top: 50%;
-  margin-top: -10px; }
-.owl-carousel .owl-prev {
-  left: 0; }
-.owl-carousel .owl-next {
-  right: 0; }
+/*Pongo las flechas del owl-carusel encima de la imagen*/
+.owl-carousel {
+  position: relative; }
+  .owl-carousel .owl-prev,
+  .owl-carousel .owl-next {
+    position: absolute;
+    top: 50%;
+    margin-top: -10px; }
+  .owl-carousel .owl-prev {
+    left: 0; }
+  .owl-carousel .owl-next {
+    right: 0; }
 
 /*# sourceMappingURL=style.css.map */
