--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 
 
 
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
