--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,7 +111,7 @@
 
     </section>
 
-    <section class="wo-section-back2 wo-height-med wo-center">
+    <section class="wo-section-back2 wo-height-big wo-center">
         <div class="container">
             <i class="icon"><span class="icon-facebook-with-circle"></span></i>
             <div class="wo-text wo-center"><p>These guys are just incredible! I was able to get my project done in just 7 days.<br>I mean AMAZING service! Highly recomended.</p></div>
