corrijo background iconos

--- a/style.css
+++ b/style.css
@@ -2487,7 +2487,7 @@ p {
     margin-left: -0.4rem; }
 
 .icon-social span {
-  background: #3ec6ff; }
+  text-align: center; }
   .icon-social span:before {
     color: #FFFFFF; }
 
