--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -371,5 +371,11 @@ p{
   .owl-next {
     right: 0;
   }
+  .owl-dots{
+    &.active{
+      background: $white-color;
+      border: 1px solid $main-color;
+    }
+  }
 
 }
