corrijo background iconos

--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -373,8 +373,10 @@ p{
   }
   .owl-dots{
     &.active{
-      background: $white-color;
-      border: 1px solid $main-color;
+      span{
+        background: $white-color;
+        border: 1px solid $main-color;
+      }
     }
   }
 
