corrijo background iconos

--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -372,7 +372,7 @@ p{
     right: 0;
   }
   .owl-dots{
-    &.active{
+    .owl-dot.active{
       span{
         background: $white-color;
         border: 1px solid $main-color;
