--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -142,9 +142,7 @@
 
 <div class="footer">
     <div class="container">
-        <footer class="footer">
-            <p>Lorem ipsum dolor sit amet. <a>999 123 456</a></p>
-        </footer>
+            {% include footer.html %}
     </div>
 </div>
 
