--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -24,8 +24,10 @@ h1, h2, h3, h4, h5{
   font-family: $font-family2;
 }
 
-p a{
-  color: $main-color;
+p {
+  a{
+    color: $main-color;
+  }
 }
 h1{
   font-size: $rem*3;
