--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
-<footer class="footer">
- <p>Lorem ipsum dolor sit amet. <a>999 123 456</a></p>
+<footer class="footer wo-center">
+ <p>Lorem ipsum dolor sit amet. <a>999 123 456</a>Morbi bibendum tortor ac mi facilisis</p>
 </footer>
