--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -1,8 +1,8 @@
 //Éstas son mis propias variables
 
 /*Breakpoints*/
-$smartphones:"only screen and (max-width: 780px)";
-$tablets:"only screen and (max-width: 960px)";
+$smartphones:"only screen and (max-width: 479px)";
+$tablets:"only screen and (max-width: 780px)";
 
 /*Fonts*/
 $font-family1: 'Open Sans', sans-serif;
@@ -175,10 +175,10 @@ p{
       margin: -8% 0 0 -25%;
       text-align:center;
       @media #{$smartphones}{
-        left: 30%;
+        left: 35%;
         top: 40%;
         height: 30%;
-        width: 90%;
+        width: 80%;
       }
       h1,h4{
         color: $white-color;
@@ -224,6 +224,7 @@ p{
     margin-right: $rem*0.5;
   }
 }
+
 .wo-section-back2{
   background: url("img/slide2.jpg") fixed center center;
   height:450px;
@@ -238,7 +239,7 @@ p{
   }
 
 }
-
+/*Formulario del newsletter*/
 .wo-form {
   .wo-form-inline {
     .form-control {
@@ -374,6 +375,7 @@ p{
   .owl-next {
     right: 0;
   }
+  /*Cambio el color de los puntitos del slider*/
   .owl-dots{
     .owl-dot.active{
       span{
