--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -105,6 +105,12 @@ p{
   .input-search-invisible{
     visibility: hidden;
     width:0;
+    @media #{$smartphones}{
+      width:auto;
+    }
+    @media #{$tablets}{
+      width:auto;
+    }
   }
 }
 
