--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
 
 
 
-    <section class="wo-section-back wo-height-med">
+    <section class="wo-section-newsletter wo-height-med">
         <div class="container">
             <div class="wo-title"><h3>SUSCRIBE TO OUR NEWSLETTER</h3></div>
             <div class="wo-form">
@@ -111,7 +111,7 @@
 
     </section>
 
-    <section class="wo-section-back2 wo-height-big wo-center">
+    <section class="wo-section-testimonial wo-height-big wo-center">
         <div class="container">
             <i class="icon"><span class="icon-facebook-with-circle"></span></i>
             <div class="wo-text wo-center"><p>These guys are just incredible! I was able to get my project done in just 7 days.<br>I mean AMAZING service! Highly recomended.</p></div>
@@ -177,7 +177,7 @@
                     items:3
                 },
                 1000:{
-                    items:5
+                    items:4
                 }
             }
         })
