--- a/_includes/carousel-overlay-effect.html
+++ b/_includes/carousel-overlay-effect.html
@@ -1,13 +1,16 @@
 <div class="wo-overlay-effect">
-    <img class="img-fluid" src="{{ include.image }}">
-    <div class="caption wo-center">
-        <div class="wo-caption-text">
-            <h3>{{ include.title}}</h3>
-            <div class="icons">
-                <i class="icon icon-social"><span class="icon-{{ include.social1 }}"></span></i>
-                <i class="icon icon-social"><span class="icon-{{ include.social2 }}"></span></i>
-                <i class="icon icon-social"><span class="icon-{{ include.social3 }}"></span></i>
-            </div>
-        </div>
-    </div>
+ <a href="#">
+     <img class="img-fluid" src="{{ include.image }}">
+     <div class="caption wo-center">
+         <div class="wo-caption-text">
+             <h3>{{ include.title}}</h3>
+             <div class="icons">
+                 <i class="icon icon-social"><span class="icon-{{ include.social1 }}"></span></i>
+                 <i class="icon icon-social"><span class="icon-{{ include.social2 }}"></span></i>
+                 <i class="icon icon-social"><span class="icon-{{ include.social3 }}"></span></i>
+             </div>
+         </div>
+     </div>
+ </a>
+
 </div>
