--- a/_includes/overlay-effect.html
+++ b/_includes/overlay-effect.html
@@ -1,12 +1,14 @@
 <div class="col col-lg-3 col-md-3 col-6 wo-nopadding-col wo-overlay-effect">
-<img class="img-fluid" src="{{ include.image }}">
+<a href="#">
+    <img class="img-fluid" src="{{ include.image }}">
 
-<div class="caption wo-center" href="#">
-    <div class="wo-caption-text">
-        <h3>{{ include.title }}</h3>
-        <div class="text">
-            <p>{{ include.text }}</p>
+    <div class="caption wo-center" href="#">
+        <div class="wo-caption-text">
+            <h3>{{ include.title }}</h3>
+            <div class="text">
+                <p>{{ include.text }}</p>
+            </div>
         </div>
     </div>
- </div>
 </div>
+</a>
