--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,12 +113,9 @@
 
     <section class="wo-section-testimonial wo-height-big wo-center">
         <div class="container">
-            <i class="icon"><span class="icon-facebook-with-circle"></span></i>
+            <a href="#"> <i class="icon"><span class="icon-facebook-with-circle"></span></i></a>
             <div class="wo-text wo-center"><p>These guys are just incredible! I was able to get my project done in just 7 days.<br>I mean AMAZING service! Highly recomended.</p></div>
             <div class="wo-text wo-center"><p>@Annie_Wrong</p></div>
-
-
-
         </div>
     </section>
 
