--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,7 +113,7 @@
 
     <section class="wo-section-testimonial wo-height-big wo-center">
         <div class="container">
-            <a href="#"> <i class="icon"><span class="icon-facebook-with-circle"></span></i></a>
+            <i class="icon"><a href="#"><span class="icon-facebook-with-circle"></span></a</i>
             <div class="wo-text wo-center"><p>These guys are just incredible! I was able to get my project done in just 7 days.<br>I mean AMAZING service! Highly recomended.</p></div>
             <div class="wo-text wo-center"><p>@Annie_Wrong</p></div>
         </div>
