--- a/_includes/carousel-overlay-effect.html
+++ b/_includes/carousel-overlay-effect.html
@@ -4,9 +4,9 @@
          <div class="wo-caption-text">
              <h3>{{ include.title}}</h3>
              <div class="icons">
-                 <i class="icon icon-social"><a href=""><span class="icon-{{ include.social1 }}"></span></a></i>
-                 <i class="icon icon-social"><a href=""><span class="icon-{{ include.social2 }}"></span></a></i>
-                 <i class="icon icon-social"><a href=""><span class="icon-{{ include.social3 }}"></span></a></i>
+                 <i class="icon icon-social"><span class="icon-{{ include.social1 }}"></span></i>
+                 <i class="icon icon-social"><span class="icon-{{ include.social2 }}"></span></i>
+                 <i class="icon icon-social"><span class="icon-{{ include.social3 }}"></span></i>
              </div>
          </div>
      </div>
