--- a/_includes/carousel-overlay-effect.html
+++ b/_includes/carousel-overlay-effect.html
@@ -4,9 +4,9 @@
          <div class="wo-caption-text">
              <h3>{{ include.title}}</h3>
              <div class="icons row">
-                 <div class="col-4"><i class="icon icon-social"><a href=""><span class="icon-{{ include.social1 }}"></span></a></i></div>
-                 <div class="col-4"><i class="icon icon-social"><a href=""><span class="icon-{{ include.social2 }}"></span></a></i></div>
-                 <div class="col-4"><i class="icon icon-social"><a href=""><span class="icon-{{ include.social3 }}"></span></a></i></div>
+                 <div class="col-4 wo-nopadding-col"><i class="icon icon-social"><a href=""><span class="icon-{{ include.social1 }}"></span></a></i></div>
+                 <div class="col-4 wo-nopadding-col"><i class="icon icon-social"><a href=""><span class="icon-{{ include.social2 }}"></span></a></i></div>
+                 <div class="col-4 wo-nopadding-col"><i class="icon icon-social"><a href=""><span class="icon-{{ include.social3 }}"></span></a></i></div>
              </div>
          </div>
      </div>
