--- a/style.css
+++ b/style.css
@@ -2656,6 +2656,7 @@ p {
 /*Pongo las flechas del owl-carusel encima de la imagen*/
 .owl-carousel {
   position: relative;
+  /*centro los iconos social del item-carrusel*/
   /*Cambio el color de los puntitos del slider*/ }
   .owl-carousel .owl-prev,
   .owl-carousel .owl-next {
@@ -2666,6 +2667,9 @@ p {
     left: 0; }
   .owl-carousel .owl-next {
     right: 0; }
+  .owl-carousel .icons {
+    width: 70px;
+    margin: 0 auto; }
   .owl-carousel .owl-dots .owl-dot.active span {
     background: #FFFFFF;
     border: 2px solid #3ec6ff; }
