--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -79,6 +79,9 @@ p{
       font-weight: 900;
       font-family: $font-family2;
     }
+    &:hover{
+      color: $main-color;
+    }
   }
   .navbar-collapse{
     justify-content: flex-end;
@@ -224,9 +227,10 @@ p{
         font-size: 3rem;
 
       }
-      &:hover{
-        background: none;
-      }
+
+    }
+    &:hover{
+      background: none;
     }
   }
 
