--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,7 +90,7 @@
 
     </section>
 
-    <section class="wo-height-med">
+    <section class="wo-carousel wo-height-med">
         <div class="container">
             <div class="wo-title wo-center"><h2>MEET OUR TEAM</h2></div>
             <div class="wo-text wo-center"><p>We are a very young, but very passionate design agency based in London, UK. Let us help you width your next proyect, today.</p>
