--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -217,9 +217,6 @@ p{
       }
     }
   }
-
-
-
   /*Pongo las flechas del owl-carusel encima de la imagen*/
   .owl-carousel{
     position: relative;
@@ -239,6 +236,7 @@ p{
         }
 
       }
+      color: opacity($white-color,50%);
       &:hover{
         background: none;
       }
