--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -236,7 +236,7 @@ p{
         }
 
       }
-      color: opacity($white-color,50%);
+      opacity: 0.5;
       &:hover{
         background: none;
       }
