--- a/style.css
+++ b/style.css
@@ -2464,8 +2464,12 @@ p {
   padding: 1px;
   margin-right: 5px;
   border-radius: 1px; }
-  .navbar .wo-input-search .wo-input-search {
-    visibility: hidden; }
+  @media only screen and (max-width: 479px) {
+    .navbar .wo-input-search {
+      display: none; } }
+  @media only screen and (max-width: 780px) {
+    .navbar .wo-input-search {
+      display: none; } }
 .navbar .input-search-invisible {
   visibility: hidden;
   width: 0; }
