--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -83,6 +83,9 @@ p{
       color: $main-color;
     }
   }
+  ..navbar-toggler{
+    border: 0;
+  }
   .navbar-collapse{
     justify-content: flex-end;
   }
