--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
             <div class="row">
                 {% include icon-title-text.html icon="brush" title="Web Design" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi bibendum tortor ac mi facilisis varius. "%}
                 {% include icon-title-text.html icon="camera" title="Graphic Design" text="Fusce orci ligula, dignissim sit amet tincidunt non, tristique varius nulla."%}
-                {% include icon-title-text.html icon="heart" title="UI Design" text="Cras sagittis semper erat. Donec condimentum pellentesque mi in laoreet. Quisque cursus nisi vel odio dapibus."%}
+                {% include icon-title-text.html icon="heart" title="UI Design" text="Cras sagittis semper erat. Donec condimentum pellentesque mi in laoreet. Quisque cuel odio dapibus."%}
                 {% include icon-title-text.html icon="tablet" title="Copywritting" text="Non pharetra sem ultrices. Vivamus cursus risus sit amet volutpat cursus."%}
 
             </div>
