--- a/_includes/overlay-effect.html
+++ b/_includes/overlay-effect.html
@@ -1,5 +1,6 @@
-<div class="col col-lg-3 col-md-3 col-6 wo-nopadding-col wo-overlay-effect">
-<a href="#">
+<div class="col col-lg-3 col-md-3 col-6 wo-overlay-effect">
+<div class="wo-nopadding-col">
+    <a href="#">
     <img class="img-fluid" src="{{ include.image }}">
 
     <div class="caption wo-center" href="#">
@@ -11,5 +12,6 @@
         </div>
     </div>
  </a>
+</div>
 </div>
 
