--- a/_includes/overlay-effect.html
+++ b/_includes/overlay-effect.html
@@ -1,5 +1,5 @@
 <div class="col col-lg-3 col-md-3 col-6 wo-overlay-effect">
-<div class="wo-nopadding-col">
+<div class="wo-nomargin-col">
     <a href="#">
     <img class="img-fluid" src="{{ include.image }}">
 
