--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -73,7 +73,10 @@ p {
   padding-left: 0;
   padding-right: 0;
 }
+.wo-nomargin-col{
+  margin: 0 -15px;
 
+}
 .wo-center{
   text-align: center;
 }
