--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
     </section>
 
     <section class="wo-height-big">
-
+        <div class="container-fluid">
         <div class="row">
                 {% include overlay-effect.html image="img/overlay1.jpg" title="ALWAYS ON TIME" text="Lorem ipsum dolor sit amet"  %}
 
@@ -86,6 +86,7 @@
 
                 {% include overlay-effect.html image="img/overlay4.jpg" title="WE BUILD" text="Lorem ipsum dolor sit amet" %}
             </div>
+        </div>
         </div>
 
     </section>
